# LRS2_Sky_Modeling

./: LICENSE  README.md  environment.yml  pyproject.toml  setup.cfg
archive/: orange_file_list.txt
src/lrs2sky/: __init__.py  cli.py  ingest.py  labels.py  model.py  spectrum.py
