[metadata]
name = lrs2sky
version = 0.0.1
description = New Sky Modeling Tool for LRS2
long_description = file: README.md
long_description_content_type = text/markdown
author = Greg Zeimann
license = BSD-3-Clause
license_files = LICENSE
classifiers =
    License :: OSI Approved :: BSD License
project_urls =
    Homepage = https://github.com/

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.9
install_requires =
    numpy
    scipy
    astropy
    matplotlib
    photutils
    pyyaml
    scikit-learn
    pandas
    tables
include_package_data = True

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    lrs2sky = lrs2sky.cli:main
    lrs2sky-analyze = lrs2sky.cli:main
